[add]Task model migrate

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,7 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>ホーム画面</h1>
+
+<p>今日は何をすればいいんだっけ？</p>
+
+<p>やることが多すぎて、何から手を付けたらいいのかわからない</p>
+
+<P>そんな、あなたのタスク管理をサポートします。</P>
