--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,17 @@
       <div>
         <%= link_to "編集", edit_user_path(@user), class: "btn btn-success" %>
       </div>
+
+      <!--< %= render "routine_tasks/index", routine_tasks: @routine_tasks %>-->
+      <h5>ルーチンタスク</h5>
+      <%= link_to "＋", new_routine_task_path(@user), class: "btn btn-success" %>
+      <!--< %= link_to "ルーチンタスク一覧へ", routine_tasks_path(@user), class: "btn btn-success" %>-->
+      <%= link_to "ルーチンタスク一覧へ", routine_tasks_path(@user) %>
     </div>
   </div>
 </div>
+
+
+
+
 
