--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,42 @@
-<h1>Tasks#new</h1>
-<p>Find me in app/views/tasks/new.html.erb</p>
+<h4>新規タスク画面</h4>
+
+<div class= "container" >
+  <div class="row">
+    <div class="col-md-4 text-align">
+      <%= form_with model: @task, url:tasks_path, local: true do |f| %>
+      <!--< %= form_with model: @task do |f| %>-->
+      <div class="form-group">
+        <%= f.label :title, "タイトル" %>
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :details, "詳細" %>
+        <%= f.text_area :details, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :start_date, "開始日" %>
+        <%= f.date_field :start_date %>
+      </div>
+      <div class="form-group">
+        <%= f.label :end_date, "終了日" %>
+        <%= f.date_field :end_date %>
+      </div>
+      <div class="form-group">
+        <%= f.label :remind_at, "リマインド" %>
+        <%= f.date_field :remind_at %>
+      </div>
+      <div class="form-group">
+        <%= f.label :priority, "優先度" %>
+        <%= f.select :priority, options_for_select(Task.priorities.keys),{include_blank: "レベル" } %>
+        <!--< %= f.select :priority, [["緊急",0],["高",1],["普通",2],["低",3]] %>-->
+      </div>
+      <div class="form-group">
+        <%= f.label :status, "進捗状況" %>
+        <%= f.select :status, options_for_select(Task.statuses.keys), {include_blank: "現状" } %>
+        <!--< %= f.select :status, [["未着手",0],["着手中",1],["保留",2],["遅れ",3],["完了",4]] %>-->
+      </div>
+        <%= f.submit "登録", class: "btn btn-success"%>
+      <% end %>
+    </div>
+  </div>
+</div>
