--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,32 @@
-<h4>タスク一覧</h4>
+<h4>マイタスク</h4>
+<table>
+  <thead>
+    <tr>
+      <th>　タイトル　</th>
+      <th>　優先度　</th>
+      <th>　進捗状況　</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @tasks.each do |task| %>
+      <tr>
+        <td>　<%= task.title %>　</td>
+        <td>　<%= task.priority %>　</td>
+        <td>　<%= task.status %>　</td>
+          <% if task.user == current_user %>
+          <td><span>
+            <button type="button" class="btn btn-outline-secondary"><%= link_to "詳細", task_path(task.id) %></button>
+            <button type="button" class="btn btn-outline-primary mt-1"><%= link_to "編集" ,edit_task_path(task.id) %></button>
+            <button type="button" class="btn btn-outline-danger mt-1"><%= link_to "削除" ,task_path(task), method: :delete, data: { confirm: '本当に消しますか？' } %></button>
+              <!--<i class="far fa-trash-alt mx-2" style="color: gray;"></i>-->
+          	<!--< % end %>-->
+        	</span></td>
+        	<% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<%= link_to "新規タスク", new_task_path(@user) %>
+<%= link_to "新規タスク", new_task_path %>
+
 
