--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,6 +5,7 @@
       <th>　タイトル　</th>
       <th>　優先度　</th>
       <th>　進捗状況　</th>
+      <th>　期間　</th>
     </tr>
   </thead>
   <tbody>
@@ -13,6 +14,7 @@
         <td>　<%= task.title %>　</td>
         <td>　<%= task.priority %>　</td>
         <td>　<%= task.status %>　</td>
+        <td>　<%= "#{task.start_date}" + "～" + "#{task.end_date}" %>　</td>
           <% if task.user == current_user %>
           <td><span>
             <button type="button" class="btn btn-outline-secondary"><%= link_to "詳細", task_path(task.id) %></button>
