--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,9 @@
 //   @import "font-awesome-sprockets";
 // 　@import "font-awesome";
 
+// デプロイ後に画像ファイルを使用したいなら以下のように記述すること
+// hoge.jpgは例えで記入しているので使用したい画像ファイルを格納すればいい
+// image-urlという形にすることも忘れずに記述する。
+
+// body {
+//   background-image: image-url("hoge.jpg");}
