--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,13 +11,16 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td>　<%= task.title %>　</td>
+        <td>
+        　<%= link_to task_path(task.id) do %>
+            <%= task.title %>
+          <% end %>
+        </td>
         <td>　<%= task.priority %>　</td>
         <td>　<%= task.status %>　</td>
         <td>　<%= "#{task.start_date}" + "～" + "#{task.end_date}" %>　</td>
           <% if task.user == current_user %>
           <td><span>
-            <button type="button" class="btn btn-outline-secondary"><%= link_to "詳細", task_path(task.id) %></button>
             <button type="button" class="btn btn-outline-primary mt-1"><%= link_to "編集" ,edit_task_path(task.id) %></button>
             <button type="button" class="btn btn-outline-danger mt-1"><%= link_to "削除" ,task_path(task), method: :delete, data: { confirm: '本当に消しますか？' } %></button>
               <!--<i class="far fa-trash-alt mx-2" style="color: gray;"></i>-->
