--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <title>TodoManager</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <!--Font Awesomeのkit-->
+    <script src="https://kit.fontawesome.com/c438d690f4.js" crossorigin="anonymous"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
