--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -32,6 +32,6 @@
   </tbody>
 </table>
 
-<%= link_to "新規タスク", new_task_path %>
-
-
+<%= link_to new_task_path do %>
+<i class="far fa-plus-square fa-3x"></i>
+<% end %>
