--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,7 @@
 <h4>新規タスク画面</h4>
 
+<!--< %= render "tasks/label" %>-->
+
 <div class= "container" >
   <div class="row">
     <div class="col-md-4 text-align">
