[update] Task & devise

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,12 @@
 
 // body {
 //   background-image: image-url("hoge.jpg");}
+
+.title {
+  width: 80%;
+  margin: 40px 0 0 100px;
+}
+
+.new-buttom {
+  text-align: right;
+}
