--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,15 +8,15 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
-          <li><%= link_to " About ", home_about_path, class: "fas fa-link nav-link text-light" %></li>
-          <li><%= link_to " マイページ ", user_path(current_user), class: "fas fa-users nav-link text-light" %></li>
-          <li><%= link_to " ユーザー ", users_path, class: "fas fa-tasks nav-link text-light" %></li>
+          <li><%= link_to " About ", home_about_path, class: "fas fa-book-open nav-link text-light" %></li>
+          <li><%= link_to " マイページ ", user_path(current_user), class: "fas fa-user nav-link text-light" %></li>
+          <li><%= link_to " ユーザー ", users_path, class: "fas fa-users nav-link text-light" %></li>
           <li><%= link_to " タスク ", tasks_path(user_id: current_user.id), class: "fas fa-tasks nav-link text-light" %></li>
-          <li class= "fas fa-link nav-link text-light">カレンダー</li>
-          <li class= "fas fa-link nav-link text-light">通知</li>
+          <li class= "far fa-calendar-alt nav-link text-light">カレンダー</li>
+          <li class= "far fa-bell nav-link text-light">通知</li>
           <li><%= link_to " ログアウト ", destroy_user_session_path, method: :delete,class: "fas fa-sign-out-alt nav-link text-light" %></li>
         <% else %>
-          <li><%= link_to " About ", home_about_path, class: "fas fa-link nav-link text-light" %></li>
+          <li><%= link_to " About ", home_about_path, class: "fas fa-book-open nav-link text-light" %></li>
           <li><%= link_to " 新規登録 ", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %></li>
           <li><%= link_to " ログイン ", new_user_session_path , class: "fas fa-sign-in-alt nav-link text-light" %></li>
         <% end %>
