--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,6 @@
+<!--< %= link_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, method: :post %>-->
+<%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
+
 <h1>ホーム画面</h1>
 
 <p>今日は何をすればいいんだっけ？</p>
