[fix]ゲストログイン機能実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,13 @@
 // body {
 //   background-image: image-url("hoge.jpg");}
 
+// ホーム画面--------------------------------------------
+
+.guest-login {
+  text-align: right;
+  color: red;
+}
+
 .title {
   width: 80%;
   margin: 40px 0 0 100px;
