Added Label to the Tasks and updated the layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,22 +20,24 @@
 // デプロイ後に画像ファイルを使用したいなら以下のように記述すること
 // hoge.jpgは例えで記入しているので使用したい画像ファイルを格納すればいい
 // image-urlという形にすることも忘れずに記述する。
-
 // body {
 //   background-image: image-url("hoge.jpg");}
 
-// ホーム画面--------------------------------------------
+//----------ホーム画面----------//
 
 .guest-login {
   text-align: right;
   color: red;
 }
 
+//----------各画面のタイトル----------//
 .title {
   width: 80%;
   margin: 40px 0 0 100px;
 }
 
+//----------新規タスク画面----------//
 .new-buttom {
+  width: 80%;
   text-align: right;
 }
