--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,10 @@
+<div class="title">
+  <!--ユーザー詳細画面-->
+  <h4>マイページ</h4>
+</div>
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <!--ユーザー詳細画面-->
-      <h4>マイページ</h4>
-
       <table>
         <tr><%= attachment_image_tag @user, :profile_image, fallback: "no-image-icon.jpg", size:"100x100"%></tr>
         <tr>
