--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
-<h4>ユーザー一覧画面</h4>
-
+<div class="title">
+  <h4>ユーザー一覧画面</h4>
+</div>
 <div class="container">
   <div scope="row">
     <div class="col">
@@ -9,7 +10,6 @@
             <td></td>
             <td>名前</td>
             <td>紹介文</td>
-            <td>ルーチンタスク</td>
           </tr>
         </thead>
         <tbody>
@@ -19,7 +19,7 @@
               <td><%= link_to user.name, user_path(user.id) %></td>
               <td><%= user.introduction %></td>
               <!--<td class="text-center">< %= routine_tasks.name %></td>-->
-              
+
               <!--NomethoErrorが出たから重要でないためあと回しにする-->
               <!--<td>< %= render "routine_tasks/info", routine_task: @routine_task %></td>-->
             </tr>
