--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,11 +1,14 @@
 <div class= "guest-login" >
   <%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %>
 </div>
+<body>
+<div class="home">
+  <h1 style="color: blue;">Todo manager</h1>
 
-<h1>ホーム画面</h1>
+  <p style="color:;">今日は何をすればいいんだっけ？</p>
 
-<p>今日は何をすればいいんだっけ？</p>
+  <p style="color:;">やることが多すぎて、何から手を付けたらいいのかわからない</p>
 
-<p>やることが多すぎて、何から手を付けたらいいのかわからない</p>
-
-<P>そんな、あなたのタスク管理をサポートします。</P>
+  <P style="color:;">そんな、あなたのタスク管理をサポートします。</P>
+</div>
+</body>
