--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -4,7 +4,7 @@
 
 <div class= "container" >
   <div class="row">
-    <div class="col-md-4 text-align">
+    <div class="col-md-4">
       <%= form_with model: @task, local: true do |f| %>
         <div class="form-group">
           <%= f.label :title, "タイトル" %>
