--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,13 @@
 <footer>
-  <div class='container mt-5'>
-    <div class='row'>
-      <div class='mx-auto'>
-        <p>CopyRight Todo Manager.inc</p>
+  <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+  <div class="width: 100%; bg-dark">
+    <div class='container mt-5'>
+      <div class='row'>
+        <div class='mx-auto'>
+          <p>CopyRight Todo Manager.inc</p>
+        </div>
       </div>
     </div>
   </div>
+   <!--</nav>-->
 </footer>
