--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,11 @@
+<div class="title">
+  <h4>ユーザー編集画面</h4>
+</div>
+
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h4>ユーザー編集画面</h4>
+
       <%= form_with model:@user, local:true do |f| %>
         < %= render 'layouts/errors', obj: @user %>
         <div class="form-group">
