[add] ソート機能実装

--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,9 +1,10 @@
-<% if resource.errors.any? %>
+<% if modｌ.errors.any? >
   <div id="error_explanation">
     <ul>
-      <% resource.errors.full_messages.each do |message| %>
+      <% tasks.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
   </div>
 <% end %>
+
