--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@ body {
   width: 100%;
   position: relative;
   min-height: 100vh;
-  background-image: image-url("stil-vdaJJbls3xE-unsplash.jpg");
+  // background-image: image-url("stil-vdaJJbls3xE-unsplash.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
