--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,10 +1,9 @@
-<% if modｌ.errors.any? >
+<% if resource.errors.any? %>
   <div id="error_explanation">
     <ul>
-      <% tasks.errors.full_messages.each do |message| %>
+      <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
     </ul>
   </div>
 <% end %>
-
