--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,16 +15,16 @@
   </head>
 
   <body>
-    <main>
     <%= render "layouts/header" %>
-      <div class="container m-3">
-        <div class="row">
-          <div class="mx-auto">
-          </div>
-        </div>
-      </div>
+    <main>
+      <!--<div class="container m-3">-->
+      <!--  <div class="row">-->
+      <!--    <div class="mx-auto">-->
+      <!--    </div>-->
+      <!--  </div>-->
+      <!--</div>-->
     <%= yield %>
     </main>
-  </body>
   <%= render "layouts/footer" %>
+  </body>
 </html>
