--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
   @import "bootstrap";
 //   @import "font-awesome-sprockets";
 // 　@import "font-awesome";
@@ -23,48 +24,77 @@
 // body {
 //   background-image: image-url("scott-graham-work.jpg");}
 
-//----------ページ全体----------//
-html {
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Noto Serif JP', serif;
+
+//----------エラーメッセージ----------//
+#error_explanation {
+  border: solid 1px red;
+  padding: 3% 3% 0 3%;
+  margin-bottom: 3%;
+  ul {
+    list-style: none;
+    li {
+      color: red;
+    }
+  }
+}
+//----------エラーメッセージ（ここまで）----------//
+
+main {
+  // height: calc(100vh - 100px);
+  height: 100vh;
 }
 
+//----------フッター----------//
+.footer {
+  // margin-top: auto;
+  height:20px;
+}
 //----------ホーム画面----------//
 
-body {
+
+.background-img{
   width: 100%;
   position: relative;
   min-height: 100vh;
-  // background-image: image-url("stil-vdaJJbls3xE-unsplash.jpg");
+  background-image: image-url("stil-vdaJJbls3xE-unsplash.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
 }
 
+
+
 .home {
   text-align: center;
+  .home-text {
+    width: 70%;
+    height: 200px;
+    margin: 0 auto;
+    padding-top: 50px;
+    color: blue;
+    text-align: center;
+  }
 }
 
-.guest-login {
-  margin-right: 0;
-  width: 80%;
-  text-align: center;
-  width: 230px;
-  height: 50px;
-  padding-top: 10px;
-  border-radius: 50px;
-  background-color: white;
-}
 
-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 30px;
-  color: white;
-  text-align: center;
-}
+//---------- ゲストログイン ----------//
+// .box-guest {
+//   background-color: white;
+//   text-align: right;
+//   width: 230px;
+  // height: 70x;
+  // border-radius: 50px;
+// }
+
+// footer {
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 30px;
+//   color: white;
+//   text-align: center;
+// }
 
 //----------各画面のタイトル----------//
 .title {
