--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -2,4 +2,88 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//---------- ----------//
 
+//----------Home画面 ----------//
+.top-box-2{
+  height: 200px;
+  width: 200px;
+  background-image: image-url("Accept-tasks-pana.png");
+  background-size: cover;
+}
+
+//----------ゲストログイン----------//
+.gest-signin {
+  position: fixed;
+  right: 100px;
+  bottom: 20px;
+  display: inline-block;
+  padding: 7px 20px;
+  border-radius: 25px;
+  background-image: linear-gradient(45deg, #8929c2 0%, #bc90d6 100%);
+  transition: .4s;
+  line-height: 1.0 !important;
+  a {
+    text-decoration: none !important;
+    color: #fff !important;
+    font-weight: bold;
+    span {
+      font-size: 0.6rem;
+    }
+  }
+}
+ .gest-signin:hover {
+    background-image: linear-gradient(241deg, #8929c2 0%, #bc90d6 100%);
+  }
+
+//---------- ----------//
+
+// スライド部分
+.white-back {
+  height: 20vw;
+  width: 100%;
+  background-color: white;
+  position: relative;
+  overflow: hidden;
+  position: relative;
+ }
+  .slideConts {
+    width: 80vw;
+    height: 80%;
+    margin: 1% auto;
+    padding: 1%;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
+    transition: .5s;
+    display: flex;
+    justify-content: flex-end;
+
+  }
+
+  .slideContsL {
+    background-color: #BABABA;
+    transform: translate(-1500px, 0);
+  }
+
+  .slideContsL.show {
+    transform: translate(-20%, 0) !important;
+  }
+
+  .blank {
+    width: 9%;
+    height: 100%;
+  }
+  .slidein {
+    background-image: image-url("slidein.png");
+    width: 66%;
+    height: 100%;
+    margin: auto 5%;
+    background-size: cover;
+    margin: auto;
+  }
+  .slidein-button {
+    width: 15%;
+    height: 100%;
+    margin-right: 2%;
+    position: relative;
+  }
