--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,7 @@
 <footer>
-  <div class="width: 100%; bg-dark">
-    <div class='container mt-5'>
-      <div class='row'>
-        <div class='mx-auto'>
-          <p>CopyRight Todo Manager.inc</p>
-        </div>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <div class='footer test-center text-light'>
+      <p>CopyRight Todo Manager.inc</p>
     </div>
-  </div>
+  </nav>
 </footer>
