--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,7 @@
           <li><%#= link_to " About ", home_about_path, class: "fas fa-book-open nav-link text-light" %></li>
           <li><%= link_to " 新規登録 ", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %></li>
           <li><%= link_to " ログイン ", new_user_session_path , class: "fas fa-sign-in-alt nav-link text-light" %></li>
+          <li><%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, method: :post, class: "fas fas fa-door-open nav-link text-light" %></li>
         <% end %>
         </ul>
       </div>
