--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,9 +5,8 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-
+    <%= render 'layouts/error_messages', resource: @user %>
       <%= form_with model:@user, local:true do |f| %>
-        < %= render 'layouts/errors', obj: @user %>
         <div class="form-group">
           <%= f.label :名前 %>
           <%= f.text_field :name, class: "form-control name" %>
