--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,22 +8,22 @@
   <div class="row">
     <div class="col-md-6">
         <div class="modal-body task-show">
-          <div class="task-title form-group">
+          <div class="form-group">
             <%= label :title, "タイトル", class:"form-title"%> : <%= @task.title %>
           </div>
-          <div class="task-details form-group">
+          <div class="form-group">
             <%= label :details, "詳細", class:"form-title"%> : <%= @task.details %>
           </div>
-          <div class="task-details form-group">
+          <div class="form-group">
             <%= label :start_date, :end_date, "期間", class:"form-title"%> : <%= "#{@task.start_date}" + "～" + "#{@task.end_date}" %>
           </div>
-          <div class="task-details form-group">
+          <div class="form-group">
            <%= label :remind_at, "リマインド", class:"form-title"%> : <%= @task.remind_at %>
           </div>
-          <div class="task-details form-group">
+          <div class="form-group">
             <%= label :priority, "優先度", class:"form-title"%> : <%= @task.priority %>
           </div>
-          <div class="task-details form-group">
+          <div class="form-group">
             <%= label :status, "進捗状況", class:"form-title"%> : <%= @task.status %>
           </div>
 
