--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 
 //----------エラーメッセージ----------//
 #error_explanation {
-  border: solid 1px red;
+  // border: solid 1px red;
   padding: 3% 3% 0 3%;
   margin-bottom: 3%;
   ul {
@@ -37,17 +37,37 @@
     }
   }
 }
-//----------エラーメッセージ（ここまで）----------//
 
-main {
-  // height: calc(100vh - 100px);
-  height: 100vh;
+//----------ヘッダー----------//
+
+// main {
+//   // height: calc(100vh - 100px);
+//   height: 100vh;
+// }
+
+.wrapper{
+    min-height: 100vh;
+    position: relative;/*←相対位置*/
+    padding-bottom: 120px;/*←footerの高さ*/
+    box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
 }
-
 //----------フッター----------//
-.footer {
-  // margin-top: auto;
-  height:20px;
+// .footer {
+//   // margin-top: auto;
+//   background-color: #383838;
+//   height: 50px;
+//   width: 100%;
+//   text-aline: center;
+// }
+footer{
+    width: 100%;
+    background-color: #212121;
+    color: #fff;
+    text-align: center;
+    padding: 30px 0;
+
+ position: absolute;/*←絶対位置*/
+    bottom: 0; /*下に固定*/
 }
 //----------ホーム画面----------//
 
@@ -76,26 +96,6 @@ main {
   }
 }
 
-
-//---------- ゲストログイン ----------//
-// .box-guest {
-//   background-color: white;
-//   text-align: right;
-//   width: 230px;
-  // height: 70x;
-  // border-radius: 50px;
-// }
-
-// footer {
-//   position: absolute;
-//   bottom: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 30px;
-//   color: white;
-//   text-align: center;
-// }
-
 //----------各画面のタイトル----------//
 .title {
   width: 230px;
@@ -108,16 +108,7 @@ main {
   border-radius: 50px;
 }
 
-//----------新規タスク画面----------//
-.new-buttom {
-  width: 75%;
-  text-align: right;
-}
-
-//---------- ドラッグ&ドロップのためのソース----------//
-//---------- カーソルのデザインを変更----------//
-.table-sortable {
-  tr.item {
-    cursor: row-resize;
-  }
+//----------削除ボタン----------//
+.fa-trash-alt {
+  color:#e00d0d !important;
 }
