--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,5 @@
 <footer>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <div class='footer test-center text-light'>
+    <div class='footer'>
       <p>CopyRight Todo Manager.inc</p>
     </div>
-  </nav>
 </footer>
