--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,39 @@
 // Place all the styles related to the tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+//----------タスクタイトル----------//
+.task-t {
+  width: 230px;
+  height: 50px;
+  margin: 40px 0 0 -100px;
+  padding-top: 10px;
+  background-color: gray;
+  color: white;
+  text-align: center;
+  border-radius: 50px;
+}
+
+//----------新規タスク画面----------//
+.new-buttom {
+  width: 75%;
+  margin-bottom: 10px;
+  text-align: right;
+}
+
+//----------タスク一覧画面----------//
+.task-seek {
+  width: 100%;
+  margin: 20px 0 0 auto;
+}
+
+
+
+//---------- ドラッグ&ドロップのためのソース----------//
+//---------- カーソルのデザインを変更----------//
+.table-sortable {
+  tr.item {
+    cursor: row-resize;
+  }
+}
