--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,19 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <%= render "layouts/header" %>
-    <main>
-      <!--<div class="container m-3">-->
-      <!--  <div class="row">-->
-      <!--    <div class="mx-auto">-->
-      <!--    </div>-->
-      <!--  </div>-->
-      <!--</div>-->
-    <%= yield %>
-    </main>
-  <%= render "layouts/footer" %>
+    <div class="wrapper">
+      <%= render "layouts/header" %>
+        <main>
+          <!--<div class="container m-3">-->
+          <!--  <div class="row">-->
+          <!--    <div class="mx-auto">-->
+          <!--    </div>-->
+          <!--  </div>-->
+          <!--</div>-->
+        <%= yield %>
+        </main>
+      <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
