[update] layoutを更新した。

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -10,7 +10,10 @@
   </div>
 
 <div class="home">
-  <h4 class="home-text">Todo managerはあなたが抱える仕事を優先度と重要度を用いて分類し、タスクの優先順位を簡単に見分けられるようにサポートするアプリケーションです。</h4>
+  <h4 class="home-text">
+  Todo managerはあなたが抱える仕事を優先度と重要度を用いて分類し、
+  タスクの優先順位を簡単に見分けられるようにサポートするアプリケーションです。
+  </h4>
 </div>
   <div class="container">
     <div class="row">
@@ -20,6 +23,12 @@
         <P style="color:;">そんな、あなたのタスク管理をサポートします。</P>
         <P style="color:;">優先度や仕事の進捗状況などを表示でき。状況に合わせたカスタマイズが可能です。</P>
         <P style="color:;">ToDoリストがシンプルに確認できて使いやすいアプリ。</P>
+        <P style="color:;">
+          タスクとは「やることが具体的に定まった一つの手順・作業・仕事」を意味する言葉ですが、
+          ルーチンタスクとは「やることが具体的に定まったルーチンワーク」のことです。
+          自分が抱えるルーチンワークをルーチンタスクとして洗い出し、
+          洗い出したそれらを専用の考え方と仕組みによって制御することで、日常が見違えてきます。
+        </P>
         <%= render "slidein" %>
       </div>
     </div>
