--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -18,12 +18,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <p style="color:;">今日は何をすればいいんだっけ？</p>
-        <p style="color:;">やることが多すぎて、何から手を付けたらいいのかわからない</p>
-        <P style="color:;">そんな、あなたのタスク管理をサポートします。</P>
-        <P style="color:;">優先度や仕事の進捗状況などを表示でき。状況に合わせたカスタマイズが可能です。</P>
-        <P style="color:;">ToDoリストがシンプルに確認できて使いやすいアプリ。</P>
-        <P style="color:;">
+        <p style="">今日は何をすればいいんだっけ？</p>
+        <p style="">やることが多すぎて、何から手を付けたらいいのかわからない</p>
+        <P style="">そんな、あなたのタスク管理をサポートします。</P>
+        <P style="">優先度や仕事の進捗状況などを表示でき。状況に合わせたカスタマイズが可能です。</P>
+        <P style="">ToDoリストがシンプルに確認できて使いやすいアプリ。</P>
+        <P style="">
           タスクとは「やることが具体的に定まった一つの手順・作業・仕事」を意味する言葉ですが、
           ルーチンタスクとは「やることが具体的に定まったルーチンワーク」のことです。
           自分が抱えるルーチンワークをルーチンタスクとして洗い出し、
