--- a/app/views/tasks/search.html.erb
+++ b/app/views/tasks/search.html.erb
@@ -12,9 +12,9 @@
       <br>
       <br>
       <!--#タグによって絞り込んだ投稿一覧-->
-      <%#= "タグが ─ "%>
+      <%= "ラベルが ─ "%>
       <%= @label.label_name %>
-      <%#= " ─ の投稿一覧" %>
+      <%= " ─ の投稿一覧" %>
       <br>
       <% @tasks.each do |task| %>
         <%= link_to task.title, task %>
